--- a/code/index/assets/css/gaia.css
+++ b/code/index/assets/css/gaia.css
@@ -1,20 +1,3 @@
-/* =========================================================
-* Gaia Bootstrap Template - v1.0.1
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/gaia-bootstrap-template
-* Licensed under MIT (https://github.com/creativetimofficial/gaia-bootstrap-template/blob/master/LICENSE.md)
-* Copyright 2019 Creative Tim (http://www.creative-tim.com)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. */
-
-
-/*      light colors         */
-
 html {
     font-size: 14px;
     -ms-text-size-adjust: 100%;
@@ -3079,7 +3062,7 @@ fieldset[disabled] .form-control {
         padding-left: 0;
     }
     .section-we-made-1 .transition-1 {
-        /*     		transition: all 0.5s; */
+        transition: all 0.5s;
     }
     .section-we-made-2 .scroll-area {
         width: 70%;
@@ -4018,7 +4001,7 @@ body {
         display: none;
     }
     .navbar-fixed-top {
-        -webkit-backface-visibility: hidden;
+        /*-webkit-backface-visibility: hidden;*/
     }
     .social-line .btn {
         margin: 0 0 10px 0;
