--- a/Site/MeuSite/public/css/gaia.css
+++ b/Site/MeuSite/public/css/gaia.css
@@ -2,6 +2,7 @@ html {
     font-size: 14px;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -57,7 +58,7 @@ h6,
 .content-blog p {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: "Cambo", "Times New Roman", serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 a,
@@ -74,7 +75,7 @@ h6 a,
 .h6 a,
 .content-blog p a {
     font-size: inherit;
-    font-family: "Cambo", "Times New Roman", serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .content-blog {
@@ -140,7 +141,7 @@ td,
 small,
 .media h5,
 .subtitle {
-    font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -164,7 +165,7 @@ a:hover {
 }
 
 .title-modern {
-    font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 200;
 }
 
@@ -206,7 +207,7 @@ a:hover {
 .quotes:after {
     position: absolute;
     font-size: 40px;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #777777;
     line-height: 0;
 }
@@ -686,7 +687,7 @@ a,
 
 .btn-danger .caret,
 .navbar .navbar-nav>li>a.btn-danger .caret {
-    border-top-color: #e78b90;
+    border-top-color: #F0CC04;
 }
 
 .btn-black,
@@ -983,11 +984,11 @@ a,
 }
 
 .has-error .form-control {
-    color: #e78b90;
+    color: #F0CC04;
 }
 
 .has-error .form-control:focus {
-    border-color: #e78b90;
+    border-color: #F0CC04;
 }
 
 .form-control+.form-control-feedback {
@@ -1011,7 +1012,7 @@ a,
 }
 
 .has-error .form-control-feedback {
-    color: #e78b90;
+    color: #F0CC04;
 }
 
 .has-success .form-control-feedback {
@@ -1031,8 +1032,8 @@ a,
 }
 
 .has-error .form-control:focus+.input-group-addon {
-    border-color: #e78b90;
-    color: #e78b90;
+    border-color: #F0CC04;
+    color: #F0CC04;
 }
 
 .has-success .form-control:focus+.input-group-addon {
@@ -1960,7 +1961,7 @@ fieldset[disabled] .form-control {
 }
 
 .label-danger {
-    background-color: #e78b90;
+    background-color: #F0CC04;
 }
 
 .btn-social {
@@ -2127,7 +2128,7 @@ fieldset[disabled] .form-control {
 
 .dropdown-menu.dropdown-danger>li>a:hover,
 .dropdown-menu.dropdown-danger>li>a:focus {
-    color: #e78b90;
+    color: #F0CC04;
 }
 
 .dropdown-menu.dropdown-warning>li>a:hover,
@@ -2518,7 +2519,7 @@ fieldset[disabled] .form-control {
 }
 
 .list-logos-danger .active .client-logo {
-    color: #e78b90;
+    color: #F0CC04;
 }
 
 .client-logo {
@@ -2533,7 +2534,7 @@ fieldset[disabled] .form-control {
 }
 
 .client-logo h3 {
-    font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .section-team-1 {
