--- a/Aplicação/Tela login + banco/MavenLogin/src/main/java/com/mycompany/mavenlogin/Login.form
+++ b/Aplicação/Tela login + banco/MavenLogin/src/main/java/com/mycompany/mavenlogin/Login.form
@@ -61,7 +61,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jPasswordField1" min="-2" pref="360" max="-2" attributes="0"/>
+                              <Component id="tfSenha" min="-2" pref="360" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="tfLogin" min="-2" pref="360" max="-2" attributes="0"/>
                                   <Component id="btSenha" min="-2" pref="360" max="-2" attributes="0"/>
@@ -82,7 +82,7 @@
                   <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                   <Component id="tfLogin" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jPasswordField1" pref="40" max="32767" attributes="0"/>
+                  <Component id="tfSenha" pref="40" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                   <Component id="btLogin" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -147,7 +147,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btLoginActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="jPasswordField1">
+        <Component class="javax.swing.JPasswordField" name="tfSenha">
         </Component>
       </SubComponents>
     </Container>
@@ -188,11 +188,6 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\natal\OneDrive\Documentos\pi-2sem-2.0\mineHash\Design\Logo\miniHash.png"/>
-            </Property>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
