alinhamento das labels

--- a/Site/MeuSite/public/css/estilo.css
+++ b/Site/MeuSite/public/css/estilo.css
@@ -14,12 +14,7 @@
 }
 
 .div-modal {
-
     padding: 8px;
-    
-    
-
-
 }
 
 .modal-botao {
@@ -44,4 +39,32 @@
 
 .forgot-pass:hover {
     color: #F0CC04;
+}
+
+.label-nome {
+    margin-left: 4.5em;
+}
+
+.label-data {
+    margin-left: 6em;
+}
+
+.label-cpf-cnpj {
+    margin-left: 3em;
+}
+
+.label-telefone-cel {
+    margin-left: 4.5em;
+}
+.label-logradouro {
+    margin-left: 2.5em;
+}
+.label-endereco {
+    margin-left: 1.4em;
+}
+.label-numero {
+    margin-left: -1.7em;
+}
+.label-apelido {
+    margin-left: 6em;
 }
