--- a/Site/MeuSite/public/css/bootstrap.css
+++ b/Site/MeuSite/public/css/bootstrap.css
@@ -3073,6 +3073,7 @@ label {
     max-width: 100%;
     margin-bottom: 5px;
     font-weight: bold;
+    margin-right: 15em;
 }
 
 input[type="search"] {
