--- a/Aplicação/TELA_SWING_DADOS/Tela Captura Dados/src/main/java/com/mycompany/sprint2/minehash/CapturaDadosTela.form
+++ b/Aplicação/TELA_SWING_DADOS/Tela Captura Dados/src/main/java/com/mycompany/sprint2/minehash/CapturaDadosTela.form
@@ -151,14 +151,14 @@
                               <Component id="tfFab" min="-2" pref="360" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="211" max="32767" attributes="0"/>
+                      <EmptySpace pref="196" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="tfFab" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="3" max="32767" attributes="0"/>
